src/test/data/psi_tree/valid_contracts/tag_with_list_literal.tz
parameter unit;
storage unit;
code {
       PUSH (pair int (list int)) (Pair 123 { 1; 2; 3 })
     }