src/test/data/psi_tree/syntax_errors/pair_invalid_nesting.tz
code {
       PUSH int (Pair int 123);
     }